welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono2:1: error: expected start of definition
override def run() {
         ^PictureMono2:8: error: expected class or object definition
def marque(){
^PictureMono2:13: error: expected class or object definition
def faireV(){
^